# qt-material3-widget

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  NOTICE  README.md  README.txt  SECURITY.md  STATUS.md  example_qt_material_theme.xml  qt_material3_widget_roadmap_and_status.md
benchmarks/: CMakeLists.txt  benchmark_theme.cpp
benchmarks/core/: benchmark_paintcache.cpp
benchmarks/effects/: benchmark_ripple.cpp  benchmark_shadow_cache_pipeline.cpp
benchmarks/specs/: benchmark_spec_factory_pipeline.cpp
benchmarks/theme/: benchmark_theme_manager_fanout.cpp  benchmark_theme_pipeline.cpp  benchmark_theme_switch.cpp
benchmarks/widgets/: benchmark_carousel.cpp  benchmark_datepicker.cpp  benchmark_menu.cpp  benchmark_table.cpp  benchmark_widget_creation.cpp
examples/: CMakeLists.txt
examples/core-playground/: ACCESSIBILITY_CHECKLIST.md  CMakeLists.txt  main.cpp  testcontrolwidget.cpp  testcontrolwidget.h
examples/forms/: formgallerywindow.cpp  formgallerywindow.h  main.cpp
examples/gallery/: CMakeLists.txt  gallerywindow.cpp  gallerywindow.h  main.cpp
examples/install-consumer/: CMakeLists.txt  main.cpp
examples/minimal-consumer/: CMakeLists.txt  advanced_main.cpp  main.cpp
examples/theme-playground/: CMakeLists.txt  main.cpp  themepreviewwindow.cpp  themepreviewwindow.h
examples/theme-studio/: CMakeLists.txt  README.md  main.cpp  themecolorrolesview.cpp  themecolorrolesview.h  themecompareview.cpp  themecompareview.h  themeeditorpanel.cpp  themeeditorpanel.h  themejsonview.cpp  themejsonview.h  themepresetcatalog.cpp  themepresetcatalog.h  themepreviewpane.cpp  themepreviewpane.h  themestudiocontroller.cpp  themestudiocontroller.h  themestudiowindow.cpp  themestudiowindow.h
examples/theming-backend-report/: CMakeLists.txt  main.cpp
examples/theming-component-overrides/: CMakeLists.txt  main.cpp
examples/theming-json-workflow/: CMakeLists.txt  main.cpp
examples/theming-runtime-switch/: CMakeLists.txt  main.cpp
examples/theming-seed-workflow/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  qtmaterialabstractbutton.cpp  qtmaterialasyncstate.cpp  qtmaterialautomation.cpp  qtmaterialcomponentregistry.cpp  qtmaterialcontrol.cpp  qtmaterialformfieldcontrol.cpp  qtmaterialicon.cpp  qtmaterialinputcontrol.cpp  qtmaterialinteractionstate.cpp  qtmaterialnavigationmodel.cpp  qtmaterialoverlaysurface.cpp  qtmaterialpaintcache.cpp  qtmaterialpaletteadapter.cpp  qtmaterialproxystyle.cpp  qtmaterialselectioncontrol.cpp  qtmaterialsurface.cpp  qtmaterialthemecontextbinding.cpp  qtmaterialwidget.cpp
src/effects/: CMakeLists.txt  qtmaterialelevationrenderer.cpp  qtmaterialfocusindicator.cpp  qtmaterialpaintcache.cpp  qtmaterialripplecontroller.cpp  qtmaterialscrimwidget.cpp  qtmaterialshadowcache.cpp  qtmaterialshadowrenderer.cpp  qtmaterialstatelayerpainter.cpp  qtmaterialtransitioncontroller.cpp
src/foundation/: CMakeLists.txt
src/specs/: CMakeLists.txt  qtmaterialactionbuttonspecresolver.cpp  qtmaterialappbarspec.cpp  qtmaterialappbarspecresolver.cpp  qtmaterialautocompletepopupspec.cpp  qtmaterialautocompletepopupspecresolver.cpp  qtmaterialautocompletespecresolver.cpp  qtmaterialbannerspec.cpp  qtmaterialbottomsheetspec.cpp  qtmaterialbuttonspec.cpp  qtmaterialbuttonspecresolver.cpp  qtmaterialcardspec.cpp  qtmaterialcarouselspec.cpp  qtmaterialcheckboxspec.cpp  qtmaterialchipspec.cpp  qtmaterialchipspecresolver.cpp  qtmaterialcompactspecresolver.cpp  qtmaterialcomponentfamilyspecs.cpp  qtmaterialcomponenttokenapplier.cpp  qtmaterialcomponenttokenapplier_p.h  qtmaterialdatacomponentspecresolver.cpp  qtmaterialdatacomponentspecs.cpp  qtmaterialdataspecresolver.cpp  qtmaterialdatefieldspec.cpp  qtmaterialdatefieldspecresolver.cpp  qtmaterialdatepickerspec.cpp  qtmaterialdialogspec.cpp  qtmaterialdialogspecresolver.cpp  qtmaterialdividerspec.cpp  qtmaterialdividerspec.patch.md  qtmaterialfabspec.cpp  qtmaterialgridlistspec.cpp  qtmaterialiconbuttonspec.cpp  qtmateriallistitemspec.cpp  qtmateriallistitemspec.patch.md  qtmateriallistspec.patch.md  qtmaterialmenuitemspec.cpp  qtmaterialmenuspec.cpp  qtmaterialmenuspecresolver.cpp  qtmaterialnavigationdrawerspec.cpp  (+20 more)
src/theme/: CMakeLists.txt  qtmaterialaccessibilitytokens.cpp  qtmaterialcolorbackend.cpp  qtmaterialcolorscheme.cpp  qtmaterialcomponenttokens.cpp  qtmaterialdensitytokens.cpp  qtmaterialelevationscale.cpp  qtmaterialiconsizetokens.cpp  qtmaterialmcuadapter.cpp  qtmaterialmcuadapter_p.h  qtmaterialmotiontokens.cpp  qtmaterialshapescale.cpp  qtmaterialstatelayer.cpp  qtmaterialsystemtheme.cpp  qtmaterialtheme.cpp  qtmaterialthemebuilder.cpp  qtmaterialthemecontext.cpp  qtmaterialthemecontexthost.cpp  qtmaterialthememanager.cpp  qtmaterialthemeobserver.cpp  qtmaterialthemeoptions.cpp  qtmaterialthemeserializer.cpp  qtmaterialthemevalidation.cpp  qtmaterialtypographyscale.cpp  qtmaterialxmlthemeadapter.cpp
src/widgets/: CMakeLists.txt  qtmaterialcarousel.cpp  qtmaterialdatepicker.cpp  qtmaterialgridlist.cpp  qtmaterialtable.cpp  qtmaterialwidget_datacomponent_spec_defaults.cpp
tests/: CMakeLists.txt
tests/accessibility/: tst_keyboard_accessibility.cpp  tst_keyboard_accessibility_contracts.cpp  tst_navigation_dialog_hidpi_contracts.cpp
tests/consumer/: CMakeLists.txt  main.cpp  run_installed_package_test.cmake
tests/core/: tst_abstractbutton_state.cpp  tst_abstractbutton_themecontext.cpp  tst_asyncstate.cpp  tst_automationmetadata.cpp  tst_componentregistry.cpp  tst_formfieldcontrol.cpp  tst_inputcontrol.cpp  tst_interactionstate.cpp  tst_interactionstate_contracts.cpp  tst_metadataruntime.cpp  tst_navigationmodel.cpp  tst_overlaysurface.cpp  tst_paletteadapter.cpp  tst_selectioncontrol_layout.cpp  tst_themecontextbinding.cpp  tst_widget_themecontext.cpp
tests/effects/: tst_elevationrenderer.cpp  tst_focusindicator.cpp  tst_paintcache.cpp  tst_ripplecontroller.cpp  tst_scrimwidget.cpp  tst_shadowrenderer.cpp  tst_statelayerpainter.cpp  tst_transitioncontroller.cpp
tests/helpers/: qtmaterialcontrastassertions.h
tests/specs/: tst_phase4specs.cpp  (+40 more)
(+648 files in other folders)
